<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page1ghost"
    android:orientation="vertical"
    tools:context=".activity.Ghost">

    <TextView
        android:id="@+id/setText"
        android:layout_width="367dp"
        android:layout_height="163dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/show_story"
        android:text="@string/setText"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:fontFamily="casual"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="111dp" />


    <Button
        android:id="@+id/backBtn"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_weight="1"
        android:background="@android:color/background_light"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="72dp"
        android:layout_height="49dp"
        android:layout_gravity="center|bottom"
        android:layout_weight="1"
        android:background="@android:color/background_light"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />


</android.support.constraint.ConstraintLayout>