<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page2"
    tools:context=".ghost.Page1">

    <TextView
        android:id="@+id/story1"
        android:layout_width="wrap_content"
        android:layout_height="365dp"
        android:text="@string/story_ghost1"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/stay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/goOn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story1" />

    <Button
        android:id="@+id/goOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stay"
        app:layout_constraintTop_toBottomOf="@+id/story1" />
</android.support.constraint.ConstraintLayout>